[build-system]
requires = [
    "setuptools>=80.4.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project]
name = "mfd-network-adapter"
description = "Module which handle operations on network adapters installed on different operating systems"
requires-python = ">=3.10, <3.14"
version = "14.0.0"
dynamic = ["dependencies"]
license-files = ["LICENSE.md", "AUTHORS.md"]
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Homepage = "https://github.com/intel/mfd"
Repository = "https://github.com/intel/mfd-network-adapter"
Issues = "https://github.com/intel/mfd-network-adapter/issues"
Changelog = "https://github.com/intel/mfd-network-adapter/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
exclude = ["examples", "tests*", "sphinx-doc"]

[tool.setuptools.package-data]
"mfd_network_adapter" = ["network_interface/feature/stats/tools/*.*"]